# genesis-nav-bench

./: .gitignore  CHANGELOG.md  DATA_LICENSES.md  README.md  pyproject.toml
docs/: architecture.md  assets.md  install.md
examples/: run_pipeline.py
src/genesis_nav/: __init__.py  bootstrap.py  cli.py  config.py  examples.py  experiment.py  pipeline.py
src/genesis_nav/assets/: __init__.py  mdl_to_preview.py  polyhaven_fetcher.py  simready_mirror.py  tree_mdl_to_preview.py
src/genesis_nav/catalog/: __init__.py  catalog.py
src/genesis_nav/data/: __init__.py
src/genesis_nav/data/configs/: nav_chicane_stress_v1.yaml  nav_smoke_test_v1.yaml
src/genesis_nav/designer/: __init__.py  designer.py  prompts.py
src/genesis_nav/designer/data/: asset_registry.yaml  scene_config_schema.md
src/genesis_nav/planner/: __init__.py  astar.py  smoother.py
src/genesis_nav/robots/: go2_env.py
src/genesis_nav/robots/go2_policy/: cfgs.pkl
src/genesis_nav/runner/: __init__.py  go2_drive.py  husky_drive.py  pure_pursuit.py
