[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genesis-nav-bench"
version = "0.2.0"
description = "LLM-driven navigation-task generation + simulation for the Genesis robot simulator."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Hojin Lee", email = "hojin.lee@tum.de" },
]
requires-python = ">=3.11"
keywords = ["robotics", "simulation", "navigation", "genesis", "llm", "gemini"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "pyyaml>=6.0",
    "pillow>=10.0",
    "imageio[ffmpeg]>=2.30",
    "torch>=2.0",
]

[project.optional-dependencies]
designer = ["google-genai>=0.3"]
assets = [
    "usd-core>=24.0",
    "trimesh>=4.0",
    "objaverse>=0.1",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.5",
    "pyright>=1.1",
]
all = ["genesis-nav-bench[designer,assets,dev]"]

[project.scripts]
genesis-nav = "genesis_nav.cli:main"

[project.urls]
Homepage = "https://github.com/hojinlee/genesis-nav-bench"
Issues = "https://github.com/hojinlee/genesis-nav-bench/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["genesis_nav*"]

[tool.setuptools.package-data]
"genesis_nav.designer" = ["data/*.yaml", "data/*.md"]
"genesis_nav.data" = ["configs/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]   # line length; handled by `line-length`
